Starting to work on the multi-enterprise version of Tatami

--- a/pom.xml
+++ b/pom.xml
@@ -110,6 +110,11 @@
 
     <dependencies>
         <dependency>
+            <groupId>org.apache.geronimo.javamail</groupId>
+            <artifactId>geronimo-javamail_1.4_mail</artifactId>
+            <version>1.8.2</version>
+        </dependency>
+        <dependency>
             <groupId>org.elasticsearch</groupId>
             <artifactId>elasticsearch</artifactId>
             <version>${elasticsearch.version}</version>
