--- a/src/test/resources/tatami/tatami-test.properties
+++ b/src/test/resources/tatami/tatami-test.properties
@@ -1,3 +1,13 @@
+# tatami.version can (should) be used to version static resources and thus enable a long cache value.
+tatami.version=1.0-SNAPSHOT
+tatami.url=http://tatami.ippon.fr
+
+#E-mail configuration
+smtp.host=mail.ippon.fr
+smtp.port=25
+smtp.user=
+smtp.password=
+smtp.from=tatami@ippon.fr
 
 #Cassandra configuration
 cassandra.host=localhost:9171
