--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -16,7 +16,7 @@ log4j.logger.fr.ippon.tatami=DEBUG
 log4j.logger.me.prettyprint=WARN
 log4j.logger.net.sf.ehcache=WARN
 log4j.logger.org.apache=WARN
-log4j.logger.org.elasticsearch=INFO
+log4j.logger.org.elasticsearch=WARN
 log4j.logger.org.hibernate.validator=WARN
 log4j.logger.org.springframework=WARN
 log4j.logger.org.springframework.web=WARN
