--- a/pom.xml
+++ b/pom.xml
@@ -58,7 +58,7 @@
         <spring.version>3.1.1.RELEASE</spring.version>
         <spring.security.version>3.1.0.RELEASE</spring.security.version>
         <spring.social.version>1.0.1.RELEASE</spring.social.version>
-        <spring.mobile.version>1.0.0.RC2</spring.mobile.version>
+        <spring.mobile.version>1.0.0.RELEASE</spring.mobile.version>
         <elasticsearch.version>0.19.3</elasticsearch.version>
         <aspectj.version>1.6.11</aspectj.version>
         <slf4j.version>1.5.8</slf4j.version>
@@ -91,11 +91,6 @@
         <maven.cassandra.version>1.0.0-1</maven.cassandra.version>
     </properties>
     <repositories>
-        <repository>
-            <id>org.springframework.maven.milestone</id>
-            <name>Spring Maven Milestone Repository</name>
-            <url>http://maven.springframework.org/milestone</url>
-        </repository>
         <repository>
             <id>sonatype-releases</id>
             <name>Sonatype Releases Repository</name>
