Coded the registration/validation process

--- a/src/main/resources/META-INF/tatami/tatami.properties
+++ b/src/main/resources/META-INF/tatami/tatami.properties
@@ -1,6 +1,7 @@
 # tatami.version can (should) be used to version static resources and thus enable a long cache value.
 tatami.version=1.0-SNAPSHOT
-tatami.url=http://tatami.ippon.fr
+#tatami.url=http://tatami.ippon.fr
+tatami.url=http://localhost:8080
 
 #E-mail configuration
 smtp.host=mail.ippon.fr
