--- a/src/main/resources/META-INF/tatami/tatami.properties
+++ b/src/main/resources/META-INF/tatami/tatami.properties
@@ -1,14 +1,16 @@
 # tatami.version can (should) be used to version static resources and thus enable a long cache value.
-tatami.version=1.0-SNAPSHOT
-#tatami.url=http://tatami.ippon.fr
-tatami.url=http://localhost:8080
+tatami.version=${tatami.version}
+tatami.url=${tatami.url}
+
+#Google Analytics
+tatami.google.analytics.key=${tatami.google.analytics.key}
 
 #E-mail configuration
-smtp.host=mail.ippon.fr
-smtp.port=25
-smtp.user=
-smtp.password=
-smtp.from=tatami@ippon.fr
+smtp.host=${tatami.smtp.host}
+smtp.port=${tatami.smtp.port}
+smtp.user=${tatami.smtp.user}
+smtp.password=${tatami.smtp.password}
+smtp.from=${tatami.smtp.from}
 
 #Cassandra configuration
 cassandra.host=127.0.0.1:9160
