--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -1,5 +1,5 @@
 # Set root logger level to DEBUG and its only appender to CONSOLE.
-log4j.rootLogger=DEBUG, CONSOLE
+log4j.rootLogger=${log4j.loglevel}, CONSOLE
 
 # A1 is set to be a ConsoleAppender.
 log4j.appender.CONSOLE=org.apache.log4j.ConsoleAppender
