--- a/src/main/resources/META-INF/tatami/tatami.properties
+++ b/src/main/resources/META-INF/tatami/tatami.properties
@@ -2,8 +2,10 @@
 tatami.version=${tatami.version}
 tatami.url=${tatami.url}
 
-#Google Analytics
+#Web app configuration
+tatami.wro4j.enabled=${tatami.wro4j.enabled}
 tatami.google.analytics.key=${tatami.google.analytics.key}
+tatami.message.reloading.enabled=${tatami.message.reloading.enabled}
 
 #E-mail configuration
 smtp.host=${tatami.smtp.host}
