Refactored views, suppressed Tiles

--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -23,12 +23,12 @@
 
     <error-page>
         <error-code>500</error-code>
-        <location>/tatami/500-error</location>
+        <location>/tatami/errors/500</location>
     </error-page>
 
     <error-page>
         <error-code>404</error-code>
-        <location>/tatami/404-error</location>
+        <location>/tatami/errors/404</location>
     </error-page>
 
 </web-app>
