Added GZIP compression, finished Web perf tuning.

--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -21,6 +21,16 @@
         <listener-class>fr.ippon.tatami.web.init.WebConfigurer</listener-class>
     </listener>
 
+    <filter>
+        <filter-name>GzipFilter</filter-name>
+        <filter-class>net.sf.ehcache.constructs.web.filter.GzipFilter</filter-class>
+    </filter>
+
+    <filter-mapping>
+        <filter-name>GzipFilter</filter-name>
+        <url-pattern>/tatami/*</url-pattern>
+    </filter-mapping>
+
     <error-page>
         <error-code>500</error-code>
         <location>/tatami/errors/500</location>
