--- a/pom.xml
+++ b/pom.xml
@@ -65,7 +65,7 @@
                 <tatami.smtp.password></tatami.smtp.password>
                 <tatami.smtp.from>tatami@ippon.fr</tatami.smtp.from>
                 <tatami.google.analytics.key>UA-10959780-3</tatami.google.analytics.key>
-                <tatami.wro4j.enabled>false</tatami.wro4j.enabled>
+                <tatami.wro4j.enabled>true</tatami.wro4j.enabled>
                 <tatami.message.reloading.enabled>false</tatami.message.reloading.enabled>
             </properties>
         </profile>
@@ -88,7 +88,6 @@
         <hector.version>1.0-5</hector.version>
         <hector.mapper.version>1.1-03</hector.mapper.version>
         <persistence.api.version>1.0.2</persistence.api.version>
-        <ehcache.version>2.5.1</ehcache.version>
         <javax.inject.version>1</javax.inject.version>
         <cglib.version>2.2.2</cglib.version>
         <javax.servlet.api.version>3.0.1</javax.servlet.api.version>
@@ -167,7 +166,12 @@
         <dependency>
             <groupId>net.sf.ehcache</groupId>
             <artifactId>ehcache-core</artifactId>
-            <version>${ehcache.version}</version>
+            <version>2.5.3</version>
+        </dependency>
+        <dependency>
+            <groupId>net.sf.ehcache</groupId>
+            <artifactId>ehcache-web</artifactId>
+            <version>2.0.4</version>
         </dependency>
         <dependency>
             <groupId>org.slf4j</groupId>
