Created a Spring Security "admin" role

--- a/src/main/resources/META-INF/tatami/tatami.properties
+++ b/src/main/resources/META-INF/tatami/tatami.properties
@@ -7,6 +7,9 @@ tatami.wro4j.enabled=${tatami.wro4j.enabled}
 tatami.google.analytics.key=${tatami.google.analytics.key}
 tatami.message.reloading.enabled=${tatami.message.reloading.enabled}
 
+#User configuration
+tatami.admin.users=jdubois@ippon.fr,tatami@ippon.fr
+
 #E-mail configuration
 smtp.host=${tatami.smtp.host}
 smtp.port=${tatami.smtp.port}
