--- a/src/test/resources/tatami/tatami-test.properties
+++ b/src/test/resources/tatami/tatami-test.properties
@@ -2,6 +2,9 @@
 tatami.version=1.0-SNAPSHOT
 tatami.url=http://tatami.ippon.fr
 
+#User configuration
+tatami.admin.users=tatami@ippon.fr
+
 #E-mail configuration
 smtp.host=mail.ippon.fr
 smtp.port=25
