--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -11,7 +11,7 @@ log4j.appender.CONSOLE.layout.ConversionPattern=[%p] %c - %m%n
 
 # Change the level of messages for various packages.
 log4j.logger.monitoring=WARN
-log4j.logger.fr.ippon.tatami=DEBUG
+log4j.logger.fr.ippon.tatami=WARN
 
 log4j.logger.me.prettyprint=WARN
 log4j.logger.net.sf.ehcache=WARN
