--- a/src/main/resources/META-INF/tatami/tatami.properties
+++ b/src/main/resources/META-INF/tatami/tatami.properties
@@ -9,6 +9,8 @@ tatami.message.reloading.enabled=${tatami.message.reloading.enabled}
 
 #User configuration
 tatami.admin.users=jdubois@ippon.fr,tatami@ippon.fr
+tatami.ldapauth.domain=ippon.fr
+tatami.ldapauth.url=ldap://directory:389/dc=ippon,dc=fr
 
 #E-mail configuration
 smtp.host=${tatami.smtp.host}
