--- a/src/test/resources/log4j.properties
+++ b/src/test/resources/log4j.properties
@@ -13,6 +13,7 @@ log4j.appender.CONSOLE.layout.ConversionPattern=[%p] %c - %m%n
 log4j.logger.monitoring=DEBUG
 log4j.logger.fr.ippon.tatami=DEBUG
 
+log4j.logger.org.openid4java=WARN
 log4j.logger.org.springframework=WARN
 log4j.logger.org.springframework.web=WARN
 log4j.logger.org.springframework.security=WARN
