--- a/src/main/resources/META-INF/tatami/tatami.properties
+++ b/src/main/resources/META-INF/tatami/tatami.properties
@@ -25,6 +25,6 @@ cassandra.clusterName=Tatami cluster
 cassandra.keyspace=tatami
 
 #Elastic Search configuration
-elasticsearch.activated=true
+elasticsearch.enabled=${tatami.elasticsearch.enabled}
 elasticsearch.indexName=tatami
 elasticsearch.path.conf=
