--- a/src/test/resources/tatami/tatami-test.properties
+++ b/src/test/resources/tatami/tatami-test.properties
@@ -18,6 +18,6 @@ cassandra.cluster=Tatami cluster
 cassandra.keyspace=tatami
 
 #Elastic Search configuration
-elasticsearch.activated=false
+elasticsearch.enabled=false
 elasticsearch.indexName=tatami
 elasticsearch.path.conf=
