--- a/etc/installation/ubuntu/files/cassandra/cassandra.yaml
+++ b/etc/installation/ubuntu/files/cassandra/cassandra.yaml
@@ -66,10 +66,10 @@ partitioner: org.apache.cassandra.dht.RandomPartitioner
 
 # directories where Cassandra should store data on disk.
 data_file_directories:
-    - /var/lib/cassandra/data
+    - /opt/tatami/data/cassandra/data
 
 # commit log
-commitlog_directory: /var/lib/cassandra/commitlog
+commitlog_directory: /opt/tatami/data/cassandra/commitlog
 
 # Maximum size of the key cache in memory.
 #
@@ -138,7 +138,7 @@ row_cache_save_period: 0
 row_cache_provider: SerializingCacheProvider
 
 # saved caches
-saved_caches_directory: /var/lib/cassandra/saved_caches
+saved_caches_directory: /opt/tatami/data/cassandra/saved_caches
 
 # commitlog_sync may be either "periodic" or "batch." 
 # When in batch mode, Cassandra won't ack writes until the commit log
