--- a/etc/installation/ubuntu/files/cassandra/log4j-server.properties
+++ b/etc/installation/ubuntu/files/cassandra/log4j-server.properties
@@ -17,8 +17,8 @@
 # for production, you should probably set pattern to %c instead of %l.  
 # (%l is slower.)
 
-# output messages into a rolling log file as well as stdout
-log4j.rootLogger=INFO,stdout,R
+# output messages into a rolling log file but not stdout
+log4j.rootLogger=INFO,R
 
 # stdout
 log4j.appender.stdout=org.apache.log4j.ConsoleAppender
@@ -32,7 +32,7 @@ log4j.appender.R.maxBackupIndex=50
 log4j.appender.R.layout=org.apache.log4j.PatternLayout
 log4j.appender.R.layout.ConversionPattern=%5p [%t] %d{ISO8601} %F (line %L) %m%n
 # Edit the next line to point to your logs directory
-log4j.appender.R.File=/var/log/cassandra/system.log
+log4j.appender.R.File=/opt/tatami/log/cassandra/system.log
 
 # Application logging options
 #log4j.logger.org.apache.cassandra=DEBUG
