--- a/src/main/resources/META-INF/elasticsearch/logging.yml
+++ b/src/main/resources/META-INF/elasticsearch/logging.yml
@@ -1,4 +1,4 @@
-rootLogger: INFO, console, file
+rootLogger: WARN, file
 logger:
   # log action execution errors for easier debugging
   action: DEBUG
