--- a/pom.xml
+++ b/pom.xml
@@ -49,7 +49,7 @@
                 <tatami.google.analytics.key></tatami.google.analytics.key>
                 <tatami.wro4j.enabled>false</tatami.wro4j.enabled>
                 <tatami.message.reloading.enabled>true</tatami.message.reloading.enabled>
-                <tatami.elasticsearch.enabled>true</tatami.elasticsearch.enabled>
+                <tatami.elasticsearch.enabled>false</tatami.elasticsearch.enabled>
                 <tatami.elasticsearch.path.data>target/elasticsearch</tatami.elasticsearch.path.data>
                 <tatami.elasticsearch.path.log>target/elasticsearch</tatami.elasticsearch.path.log>
             </properties>
