--- a/pom.xml
+++ b/pom.xml
@@ -294,6 +294,11 @@
             <version>${hector.mapper.version}</version>
         </dependency>
         <dependency>
+            <groupId>org.apache.openjpa</groupId>
+            <artifactId>openjpa</artifactId>
+            <version>2.1.0</version>
+        </dependency>
+        <dependency>
             <groupId>net.sf.ehcache</groupId>
             <artifactId>ehcache-core</artifactId>
             <version>2.5.3</version>
