--- a/src/test/resources/tatami/tatami-test.properties
+++ b/src/test/resources/tatami/tatami-test.properties
@@ -21,3 +21,7 @@ cassandra.keyspace=tatami
 elasticsearch.enabled=false
 elasticsearch.indexName=tatami
 elasticsearch.path.conf=
+
+#Lucene configuration
+lucene.path=target/lucene
+lucene.language=French
