--- a/src/main/resources/META-INF/tatami/tatami.properties
+++ b/src/main/resources/META-INF/tatami/tatami.properties
@@ -28,3 +28,7 @@ cassandra.keyspace=tatami
 elasticsearch.enabled=${tatami.elasticsearch.enabled}
 elasticsearch.indexName=tatami
 elasticsearch.path.conf=
+
+#Lucene configuration
+lucene.path=${tatami.lucene.path.data}
+lucene.language=${tatami.lucene.language}
