changed default Lucene path

--- a/pom.xml
+++ b/pom.xml
@@ -50,7 +50,7 @@
                 <tatami.wro4j.enabled>false</tatami.wro4j.enabled>
                 <tatami.message.reloading.enabled>true</tatami.message.reloading.enabled>
                 <tatami.elasticsearch.enabled>false</tatami.elasticsearch.enabled>
-                <tatami.lucene.path.data>target/data</tatami.lucene.path.data>
+                <tatami.lucene.path.data>target/lucene</tatami.lucene.path.data>
                 <tatami.lucene.language>French</tatami.lucene.language>
                 <tatami.elasticsearch.path.data>target/elasticsearch</tatami.elasticsearch.path.data>
                 <tatami.elasticsearch.path.log>target/elasticsearch</tatami.elasticsearch.path.log>
@@ -77,7 +77,7 @@
                 <tatami.wro4j.enabled>false</tatami.wro4j.enabled>
                 <tatami.message.reloading.enabled>true</tatami.message.reloading.enabled>
                 <tatami.elasticsearch.enabled>false</tatami.elasticsearch.enabled>
-                <tatami.lucene.path.data>target/data</tatami.lucene.path.data>
+                <tatami.lucene.path.data>target/lucene</tatami.lucene.path.data>
                 <tatami.lucene.language>French</tatami.lucene.language>
                 <tatami.elasticsearch.path.data>target/elasticsearch</tatami.elasticsearch.path.data>
                 <tatami.elasticsearch.path.log>target/elasticsearch</tatami.elasticsearch.path.log>
@@ -118,7 +118,7 @@
                 <tatami.wro4j.enabled>true</tatami.wro4j.enabled>
                 <tatami.message.reloading.enabled>false</tatami.message.reloading.enabled>
                 <tatami.elasticsearch.enabled>true</tatami.elasticsearch.enabled>
-                <tatami.lucene.path.data>target/data</tatami.lucene.path.data>
+                <tatami.lucene.path.data>target/lucene</tatami.lucene.path.data>
                 <tatami.lucene.language>French</tatami.lucene.language>
                 <tatami.elasticsearch.path.data>target/elasticsearch</tatami.elasticsearch.path.data>
                 <tatami.elasticsearch.path.log>target/elasticsearch</tatami.elasticsearch.path.log>
