--- a/src/main/resources/META-INF/tatami/tatami.properties
+++ b/src/main/resources/META-INF/tatami/tatami.properties
@@ -8,7 +8,7 @@ tatami.google.analytics.key=${tatami.google.analytics.key}
 tatami.message.reloading.enabled=${tatami.message.reloading.enabled}
 
 #User configuration
-tatami.admin.users=jdubois@ippon.fr,tatami@ippon.fr
+tatami.admin.users=jdubois@ippon.fr,julien.dubois@gmail.com
 tatami.ldapauth.domain=ippon.fr
 tatami.ldapauth.url=ldap://directory:389/dc=ippon,dc=fr
 
