--- a/src/main/resources/META-INF/tatami/tatami.properties
+++ b/src/main/resources/META-INF/tatami/tatami.properties
@@ -1,4 +1,4 @@
-# tatami.version can (should) be used to version static resources and thus enable a long cache value.
+# tatami.version is used to version static resources and thus enable a long cache value.
 tatami.version=${tatami.version}
 tatami.url=${tatami.url}
 
@@ -24,7 +24,19 @@ cassandra.host=127.0.0.1:9160
 cassandra.clusterName=Tatami cluster
 cassandra.keyspace=tatami
 
+# Search engine configuration : you can use either Elastic Search or Lucene
+# - Elastic Search works as a cluster, and can handle larger loads than Lucene
+# - Lucene is much easier to set up, and is more performant for smaller installations
+#
+# If in doubt, use Lucene (property elasticsearch.enabled=false)
+# You can change your search engine later : a full reindex of the search engine can be triggered on the
+# administration page
+
 #Elastic Search configuration
 elasticsearch.enabled=${tatami.elasticsearch.enabled}
 elasticsearch.indexName=tatami
 elasticsearch.path.conf=
+
+#Lucene configuration
+lucene.path=${tatami.lucene.path.data}
+lucene.language=${tatami.lucene.language}
