--- a/src/test/resources/log4j.properties
+++ b/src/test/resources/log4j.properties
@@ -22,3 +22,7 @@ log4j.logger.org.springframework=WARN
 log4j.logger.org.springframework.web=WARN
 log4j.logger.org.springframework.security=WARN
 log4j.logger.org.springframework.cache=WARN
+
+log4j.logger.org.apache.directory.server=INFO
+log4j.logger.JdbmTable=INFO
+log4j.logger.JdbmIndex=INFO
